--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,9 +22,10 @@ classifiers = [
   "Programming Language :: Python :: 3.14",
   "Programming Language :: Rust",
   "Intended Audience :: Developers",
-  "License :: OSI Approved :: BSD License",
   "Operating System :: OS Independent",
 ]
+license = "BSD-3-Clause"
+license-files = ["LICENSE.md"]
 
 dynamic = ["license", "version"]
 
