--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -119,14 +119,16 @@ jobs:
           args: --release --out dist -i 3.9 3.10 3.11 3.12 3.13 3.14
       - name: Install built wheel
         if: matrix.target == 'x86_64-unknown-linux-musl'
-        uses: addnab/docker-run-action@v3
+        uses: uraimo/run-on-arch-action@v3.0.1
         with:
-          image: alpine:latest
-          options: -v ${{ github.workspace }}:/io -w /io
-          run: |
+          arch: amd64
+          distro: alpine_latest
+          githubToken: ${{ github.token }}
+          install: |
             apk add py3-pip
             pip3 install -U pip pytest
-            pip3 install uuid_utils --no-index --find-links /io/dist/ --force-reinstall --break-system-packages
+          run: |
+            pip3 install uuid_utils --no-index --find-links dist/ --force-reinstall --break-system-packages
             python3 -c "import uuid_utils"
       - name: Upload wheels
         uses: actions/upload-artifact@v6
@@ -280,7 +282,7 @@ jobs:
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v3
         with:
-          subject-path: 'wheels-*/*'
+          subject-path: "wheels-*/*"
       - name: Install uv
         uses: astral-sh/setup-uv@v7
       - name: Publish to PyPI
