--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,11 +22,11 @@ classifiers = [
   "Programming Language :: Python :: 3.14",
   "Programming Language :: Rust",
   "Intended Audience :: Developers",
-  "License :: OSI Approved :: BSD License",
   "Operating System :: OS Independent",
 ]
-
-dynamic = ["license", "version"]
+license = "BSD-3-Clause"
+license-files = ["LICENSE.md"]
+dynamic = ["version"]
 
 [project.urls]
 Documentation = "https://github.com/aminalaee/uuid-utils"
